--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_CHAT_ID=
 SEND_CRON_TEST=False
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=-
+SEND_CRON_TEST=
+DEFAULT_ZONES=
+DEFAULT_KINDS=
+DEFAULT_TERMS=
+MAX_TOTAL_PRICE=
+MIN_TOTAL_PRICE=
+MIN_AMBIENTES=
+MIN_BAÑOS=
+MIN_SUPERFICIE_CUBIERTA=
